    - Don't trust sociopaths - they don't care if you are a good person or not.
    - Factions will not form against Valyria before the year 7000, due to the power behind the Valyrian Empire. However, the opinion bonus for the Valyrian Viceroy has been nerfed, so expect intrigue and assassination.
~ Many traits have been modified. Mod specific traits that were missing effects have been given actual effects.
~ A number of nicknames have been modified or fixed.
~ Many more characters have been giving fighting/dueling traits, which in turn have been named into "[Rank] Warrior" rather than "[Rank] Duelist" to better reflect their current role.
~ Localisation has been tweaked by SweetThose, so we are no longer using the silly generated adjectives, but some much more sensical hand-made ones by him. Thanks!
~ A number of defines tweaks have been integrated at the suggestiong of SweetThose, including but not limited to reduced loss of levy on disband, making it overall less punishing.
~ Wildling characters have been expanded upon by tsf4, and a wide array of traits have been added, making the region far more interesting to play in!
~ Many more flags have been added, although many are placeholders.
+ Added shipyard building for Tarth.
+ More family members, and ancestors for houses:
	- Stark
	- Karstark
	- Redwyne
	- Hightower
	- Gardener
	- Darry
	- Bracken
	- Greystark 
	- Reyne
+ Created the Kingdom of the Blackwood Vale, and gave it to house Blackwood.
+ Created the Kingdom of the Reynelands, and gave it to house Reyne.

2x517-S-1.3A
~ Conquest CB should no longer fail when used against same faith.
~ Oldstones increased to a level eight settlement from level seven.
    - Further tweaks to ownership of the sub baronies.
~ House Jesswyse has been overhauled somewhat.
+ Number of new flags for the Rivers and Hills have been added.
+ Some new custom music files have been added. Authors have been listed in our readme.