@@ -86,9 +86,9 @@ NDefines.NMilitary.OTHER_TERRITORY_LEVY_RETURN_PERCENT = 0.40 -- Reduced from 0.
 
 NDefines.NMilitary.BATTLE_TECH_MULTIPLIER = 0.0 -- Removed
 
-NDefines.NMilitary.ATTRITION_LEVEL_FACTOR = 0.6 -- Increased from 0.5
-NDefines.NMilitary.ATTRITION_LEVEL_FACTOR_50_OVER = 1.2 -- Increased from 1.0
-NDefines.NMilitary.ATTRITION_LEVEL_FACTOR_100_OVER = 2.5 -- Increased from 2.0
+NDefines.NMilitary.ATTRITION_LEVEL_FACTOR = 0.5 -- Increased from 0.5
+NDefines.NMilitary.ATTRITION_LEVEL_FACTOR_50_OVER = 1.0 -- Increased from 1.0
+NDefines.NMilitary.ATTRITION_LEVEL_FACTOR_100_OVER = 2.0 -- Increased from 2.0
 
 NDefines.NMilitary.ARMY_MOVEMENT_SPEED = 3
 NDefines.NMilitary.NAVY_MOVEMENT_SPEED = 12 -- Reduced from 15, 4x faster than land movement
