@@ -76,17 +76,17 @@ land_province = {
 }
 
 mild_winter = {
-	supply_limit = -2
+	supply_limit = -1
 	max_attrition = 0.1
 }
 
 normal_winter = {
-	supply_limit = -3
+	supply_limit = -2
 	max_attrition = 0.15
 }
 
 severe_winter = {
-	supply_limit = -5
+	supply_limit = -3
 	max_attrition = 0.2
 }
 
