@@ -23,7 +23,7 @@ categories =  {
 		movement_cost = 1.2
 		max_attrition = 0.1
 		color = { 235 235 235 }
-		supply_limit = 1
+		supply_limit = 2
 		bottleneck_chance = 15
 	}
 
@@ -32,7 +32,7 @@ categories =  {
 		max_attrition = -0.01
 		color = { 137 104 165  }
 		
-		supply_limit = 5
+		supply_limit = 8
 		bottleneck_chance = 5
 	}
 	
@@ -41,7 +41,7 @@ categories =  {
 		max_attrition = 0.025
 		color = { 91 123 45 }
 
-		supply_limit = 3
+		supply_limit = 5
 		bottleneck_chance = 10
 	}
 	
@@ -51,7 +51,7 @@ categories =  {
 		max_attrition = 0.025
 		color = { 135 70 0 }
 
-		supply_limit = 3
+		supply_limit = 4
 		bottleneck_chance = 15
 	}
 
@@ -59,7 +59,7 @@ categories =  {
 		movement_cost = 1.1
 		max_attrition = 0.025
 		color = { 165 205 108 }
-		supply_limit = 3
+		supply_limit = 5
 		bottleneck_chance = 10
 	}
 	
@@ -68,7 +68,7 @@ categories =  {
 		defence = 2
 		max_attrition = 0.1
 		color = { 117 108 119 }
-		supply_limit = 2
+		supply_limit = 3
 		bottleneck_chance = 35
 	}
 
@@ -82,14 +82,14 @@ categories =  {
 		movement_cost = 1.0
 		max_attrition = 0.05
 		color = { 211 201 184 }
-		supply_limit = 4
+		supply_limit = 5
 		bottleneck_chance = 5
 	}
 	
 	plains = {
 		movement_cost = 1.1
 		color = { 241 221 184 }
-		supply_limit = 5
+		supply_limit = 6
 		bottleneck_chance = 5
 	}
 
@@ -125,7 +125,7 @@ categories =  {
 		max_attrition = 0.1
 		color = { 220 210 0 }
 	
-		supply_limit = 1
+		supply_limit = 2
 		bottleneck_chance = 5
 	}
 	
@@ -135,7 +135,7 @@ categories =  {
 		color = { 80 65 30 }
 	
 		supply_limit = 1
-		bottleneck_chance = 20
+		bottleneck_chance = 50
 	}
 	
 	coastal_desert = {
@@ -143,7 +143,7 @@ categories =  {
 		max_attrition = 0.05
 		color = { 200 128 0 }
 
-		supply_limit = 2
+		supply_limit = 3
 		bottleneck_chance = 5
 	}	
 }
