@@ -110,6 +110,9 @@
 + Created the Kingdom of the Reynelands, and gave it to house Reyne.
 
 2x517-S-1.3A
+~ Reduced winter attrition across the board somewhat.
+~ Reduced rate of attrition across the board somewhat.
+~ Supply limit for all terrain (excl. barrens) types increased slightly.
 ~ Conquest CB should no longer fail when used against same faith.
 ~ Oldstones increased to a level eight settlement from level seven.
     - Further tweaks to ownership of the sub baronies.
